<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".additional.actions.moreActions.MoreActionsFragment">

    <TextView
        android:id="@+id/tvWelcome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="more"
        app:layout_constraintBottom_toTopOf="@id/tvBack"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:textSize="50sp"
        android:textAllCaps="true"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>


    <TextView
        android:id="@+id/tvBack"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/actions"
        android:textAllCaps="true"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/btnShareDatabase"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:textSize="50sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnShareDatabase"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/share_database"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        app:layout_constraintBottom_toTopOf="@id/btnRefreshAll"
        android:backgroundTint="#E53935"/>


    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnRefreshAll"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/refresh_all"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        app:layout_constraintBottom_toTopOf="@id/btnResetAll"
        android:backgroundTint="#E53935"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnResetAll"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginBottom="16dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintBottom_toTopOf="@id/btnCSV"
        android:text="@string/reset_all"
        android:backgroundTint="#E53935"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnCSV"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="36dp"
        app:layout_constraintBottom_toBottomOf="parent"
        android:text="@string/export_to_csv_file"
        android:backgroundTint="#E53935"/>


</androidx.constraintlayout.widget.ConstraintLayout>