<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".additional.actions.codeDisplay.CodeFragment">


    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <TextView
        android:id="@+id/tvDisplay"
        android:textStyle="bold"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <TextView
        android:id="@+id/tvCode"
        android:layout_width="wrap_content"
        android:textColor="@color/black"
        android:layout_height="wrap_content"
        android:text="@string/codes"
        android:textStyle="bold"
        android:textSize="36sp"
        android:textAllCaps="true"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerViewScore"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginBottom="24dp"
        android:layout_marginTop="16dp"
        app:layout_constraintBottom_toTopOf="@id/tvEnterCode"
        app:layout_constraintTop_toBottomOf="@id/tvCode"/>


    <TextView
        android:id="@+id/tvEnterCode"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        android:text="@string/enter_code"
        app:layout_constraintBottom_toTopOf="@id/etEnterCode"
        android:textSize="24sp"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:layout_marginStart="16dp"/>

    <EditText
        android:id="@+id/etEnterCode"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toTopOf="@id/btnGenerateCode"
        android:hint="@string/enter_code_to_get_shared_database"
        android:inputType="number"
        android:maxLines="1"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnGenerateCode"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/download_database"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="36dp"
        app:layout_constraintBottom_toBottomOf="parent"
        android:backgroundTint="#E53935"/>

</androidx.constraintlayout.widget.ConstraintLayout>