<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".game.teams.red.red.RedTeamFragment">

    <TextView
        android:id="@+id/tvScore"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/_0_0"
        android:textSize="80sp"
        android:textColor="@color/black"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/redTeam"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="red team"
        android:textSize="24sp"
        android:textStyle="bold"
        android:textColor="#FF0000"
        android:textAllCaps="true"
        android:layout_marginStart="8dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvScore" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerViewTeamRed"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginBottom="16dp"
        app:layout_constraintTop_toBottomOf="@id/redTeam"
        app:layout_constraintBottom_toTopOf="@id/btnGoal"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnGoal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/goal"
        android:layout_marginEnd="24dp"
        android:layout_marginBottom="16dp"
        android:backgroundTint="#E53935"
        android:layout_marginStart="24dp"
        app:layout_constraintBottom_toTopOf="@id/btnEnd"/>


    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnEnd"
        android:layout_width="match_parent"
        android:layout_marginEnd="24dp"
        android:layout_marginBottom="36dp"
        android:backgroundTint="#E53935"
        android:layout_marginStart="24dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/end_match"
        app:layout_constraintBottom_toBottomOf="parent"/>


</androidx.constraintlayout.widget.ConstraintLayout>