<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".team.random.randompicking.GeneratedRandomTeamsActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="#43A082"
        android:theme="@style/ThemeOverlay.MaterialComponents.Dark"
        app:layout_constraintTop_toTopOf="parent"
        app:title="Teams Generated" />

    <androidx.drawerlayout.widget.DrawerLayout
        android:id="@+id/drawerLayout"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/toolbar">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">


            <TextView
                android:id="@+id/redTeam"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:background="#D32F2F"
                android:gravity="center"
                android:text="@string/red_team"
                android:textAllCaps="true"
                android:textColor="@color/white"
                android:textSize="24sp"
                app:layout_constraintEnd_toStartOf="@id/blueTeam"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/blueTeam"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:background="#1976D2"
                android:gravity="center"
                android:text="@string/blue_team"
                android:textAllCaps="true"
                android:textColor="@color/white"
                android:textSize="24sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/redTeam"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/scorePlayer1"
                android:layout_width="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:textColor="@color/black"
                app:layout_constraintTop_toBottomOf="@id/redTeam"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:text="@string/match_balance_80"
                android:textSize="16sp"/>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recyclerViewForRedTeams"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="16dp"
                app:layout_constraintBottom_toTopOf="@id/btnMakeTeamsAgain"
                app:layout_constraintEnd_toStartOf="@id/blueTeam"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/scorePlayer1" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recyclerViewForBlueTeams"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="16dp"
                app:layout_constraintBottom_toTopOf="@id/btnMakeTeamsAgain"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/recyclerViewForRedTeams"
                app:layout_constraintTop_toBottomOf="@id/scorePlayer1" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btnMakeTeamsAgain"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:layout_marginTop="16dp"
                android:text="@string/create_teams_again"
                android:backgroundTint="#E53935"
                app:layout_constraintBottom_toTopOf="@id/btnSubmitTeams" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btnSubmitTeams"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="#E53935"
                android:layout_marginBottom="50dp"
                android:text="@string/submit_teams"
                app:layout_constraintBottom_toBottomOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <com.google.android.material.navigation.NavigationView
            android:id="@+id/navigationDrawer"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity = "start"
            app:headerLayout="@layout/header_navdrawer"
            android:fitsSystemWindows="true">

            <ExpandableListView
                android:id="@+id/lvExp"
                android:layout_marginTop="180dp"
                android:layout_height="match_parent"
                android:layout_width="match_parent"/>

        </com.google.android.material.navigation.NavigationView>

    </androidx.drawerlayout.widget.DrawerLayout>


</androidx.constraintlayout.widget.ConstraintLayout>