<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".team.random.own.ChooseYourOwnActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="#43A082"
        android:theme="@style/ThemeOverlay.MaterialComponents.Dark"
        app:layout_constraintTop_toTopOf="parent"
        app:title="Choose Your Own Team" />

    <TextView
        android:id="@+id/tvDisplay"
        android:textStyle="bold"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <androidx.drawerlayout.widget.DrawerLayout
        android:id="@+id/drawerLayout"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/toolbar">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ProgressBar
                android:id="@+id/progressBar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"/>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recyclerViewForChoosingYourOwnTeam"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginBottom="16dp"
                app:layout_constraintBottom_toTopOf="@id/btnAddInRecaclerView"
                app:layout_constraintTop_toTopOf="parent"/>

            <com.google.android.material.floatingactionbutton.FloatingActionButton
                android:id="@+id/btnAddInRecaclerView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:layout_marginEnd="8dp"
                android:src="@drawable/ic_baseline_add_24"
                app:layout_constraintBottom_toTopOf="@id/tvBlueTeamsPlayers"
                app:layout_constraintEnd_toEndOf="parent"/>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btnSubmitTeams"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/submit_teams"
                app:layout_constraintBottom_toBottomOf="parent"
                android:layout_marginEnd="16dp"
                android:layout_marginStart="16dp"
                android:layout_marginBottom="48dp"
                android:backgroundTint="#E53935"/>

            <TextView
                android:id="@+id/tvRedTeamsPlayers"
                app:layout_constraintBottom_toTopOf="@id/btnSubmitTeams"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginBottom="16dp"
                app:layout_constraintStart_toStartOf="parent"
                android:text="@string/red_team_player"
                android:textColor="@color/black"
                android:textStyle="bold"
                android:textSize="16sp"/>

            <TextView
                android:id="@+id/tvBlueTeamsPlayers"
                app:layout_constraintBottom_toTopOf="@id/btnSubmitTeams"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:layout_marginEnd="16dp"
                app:layout_constraintEnd_toEndOf="parent"
                android:text="@string/blue_team_players"
                android:textStyle="bold"
                android:textColor="@color/black"
                android:textSize="16sp"/>


        </androidx.constraintlayout.widget.ConstraintLayout>

        <com.google.android.material.navigation.NavigationView
            android:id="@+id/navigationDrawer"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity = "start"
            app:headerLayout="@layout/header_navdrawer"
            android:fitsSystemWindows="true">

            <ExpandableListView
                android:id="@+id/lvExp"
                android:layout_marginTop="180dp"
                android:layout_height="match_parent"
                android:layout_width="match_parent"/>

        </com.google.android.material.navigation.NavigationView>

    </androidx.drawerlayout.widget.DrawerLayout>

</androidx.constraintlayout.widget.ConstraintLayout>